eventLog and log4j added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,11 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+# Logging level set to info, so it will include warn and error
+logging.level.root=info
+
+# Log file location (optional)
+logging.file.name=logs/application.log
+
+# Log4j2 configuration file location (optional)
+logging.config=classpath:log4j2.xml
